--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<a href="#" class="image"><img src="images/francoisFramed.png" alt="" data-position="center center" data-push-content="true" width="200"  /></a>
 							<h1>Dr. Francois R. Foerster</h1>
 							<h2> Experimental Psychologist, Cognitive Neuroscientist & Consultant <br /></h2>
-							<p> 
+							<!-- <p> 
 								The question of whether time exists or not in the universe relies on the question of <i> simultaneity </i>. <br />
 								Yet, any biological system holds a maximum temporal resolution of information processing, <br />
 								which enables subjective experiences of time and simultaneity and constrains all behaviors and perceptions. <br />
@@ -48,8 +48,23 @@
 								Whilst everything we do or perceive is timely defined, 
 								Humans, as any other system, hold a maximum temporal resolution to process information. Big time!
 								To solve this puzzling fact, I am investigating what affects our multifaceted experience of time. -->
+							<!-- <i> “The only reason for time is so that everything doesn't happen at once.” (Albert Einstein) </i> -->
+							<!-- </p> --> -->
+
+							<!-- Text -->
+							<section>
+								<p> 
+									The question of whether time exists or not in the universe relies on the question of <i> simultaneity </i>. <br />
+									Yet, any biological system holds a maximum temporal resolution of information processing, <br />
+									which enables subjective experiences of time and simultaneity and constrains all behaviors and perceptions. <br />
+									To solve this puzzling fact, I am investigating what affects our perceptual experience of simultaneity and it neural subtrates. <br />
+									<!-- Time and space are intertwined both in the universe and in our mind.
+									Whilst everything we do or perceive is timely defined, 
+									Humans, as any other system, hold a maximum temporal resolution to process information. Big time!
+									To solve this puzzling fact, I am investigating what affects our multifaceted experience of time. -->
+								<i> “The only reason for time is so that everything doesn't happen at once.” (Albert Einstein) </i>
 								</p>
-							<p> “The only reason for time is so that everything doesn't happen at once.” <i> (Albert Einstein) </i> </p>
+							</section>
 
 
 							<!-- <ul class="actions">
