--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Publications</a></li>
-							<li><a href="#two">Research</a></li>
+							<li><a href="#one">Scientific Publications</a></li>
+							<li><a href="#two">Research Tools</a></li>
 							<li><a href="#three">Consultancy</a></li>
 							<li><a href="#four">Education</a></li>
 							<li><a href="#five">Contact</a></li>
@@ -37,8 +37,8 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<a href="#" class="image"><img src="images/francoisFramed.png" alt="" data-position="center center" data-push-content="true" width="200"  /></a>
-							<h1>Dr. Francois R. Foerster</h1>
-							<h2> Experimental Psychologist, Cognitive Neuroscientist & Consultant <br /></h2>
+							<h2>Dr. Francois R. Foerster</h1>
+							<h3> Experimental Psychologist, Cognitive Neuroscientist & Consultant <br /></h2>
 							<!-- <p> 
 								The question of whether time exists or not in the universe relies on the question of <i> simultaneity </i>. <br />
 								Yet, any biological system holds a maximum temporal resolution of information processing, <br />
@@ -49,31 +49,30 @@
 								Humans, as any other system, hold a maximum temporal resolution to process information. Big time!
 								To solve this puzzling fact, I am investigating what affects our multifaceted experience of time. -->
 							<!-- <i> “The only reason for time is so that everything doesn't happen at once.” (Albert Einstein) </i> -->
-							<!-- </p> --> -->
+							<!-- </p> -->
 
 							<!-- Text -->
 							<section>
-								<p> 
-									The question of whether time exists or not in the universe relies on the question of <i> simultaneity </i>. <br />
-									Yet, any biological system holds a maximum temporal resolution of information processing, <br />
-									which enables subjective experiences of time and simultaneity and constrains all behaviors and perceptions. <br />
-									To solve this puzzling fact, I am investigating what affects our perceptual experience of simultaneity and it neural subtrates. <br />
-									<!-- Time and space are intertwined both in the universe and in our mind.
-									Whilst everything we do or perceive is timely defined, 
-									Humans, as any other system, hold a maximum temporal resolution to process information. Big time!
-									To solve this puzzling fact, I am investigating what affects our multifaceted experience of time. -->
-								<i> “The only reason for time is so that everything doesn't happen at once.” (Albert Einstein) </i>
-								</p>
+								The question of whether time exists or not in the universe relies on the concept of <i> simultaneity </i>.<br />
+								Yet, any biological system holds a maximum temporal resolution of information processing, <br />
+								which enables subjective experiences of time and simultaneity but constrains all perceptions and behaviors. <br />
+								To solve this puzzling fact, I investigate our sensory experiences of simultaneity and their neural subtrates. <br />
+								<!-- Time and space are intertwined both in the universe and in our mind.
+								Whilst everything we do or perceive is timely defined, 
+								Humans, as any other system, hold a maximum temporal resolution to process information. Big time!
+								To solve this puzzling fact, I am investigating what affects our multifaceted experience of time. -->
+								<br /> <i> “The only reason for time is so that everything doesn't happen at once.” (Albert Einstein) </i>
 							</section>
 
 
 							<!-- <ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul> -->
+							<ul class="actions">
+								<li><a href="https://www.youtube.com/channel/UCVUb02x2EX90dMOKyXeqjKQ" class="button">Medias</a></li>
+							</ul>
 						</div>
-						<ul class="actions">
-							<li><a href="https://www.youtube.com/channel/UCVUb02x2EX90dMOKyXeqjKQ" class="button">Medias</a></li>
-						</ul>
+
 
 					</section>
 
