--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								Whilst everything we do or perceive is timely defined, 
 								Humans, as any other system, hold a maximum temporal resolution to process information. Big time!
 								To solve this puzzling fact, I am investigating what affects our multifaceted experience of time. -->
-								<br /> <i> “The only reason for time is so that everything doesn't happen at once.” (Albert Einstein) </i>
+								<br /> <i> “The only reason for time is so that everything doesn't happen at once.” (Albert Einstein) </i> <br />
 							</section>
 
 
@@ -221,12 +221,12 @@
 
 
 				<!-- Four -->
-					<section id="four" class="wrapper style2 fade-up">
+					<section id="four" class="wrapper style4 fade-up">
 						<div class="inner">
 							<h2>Education</h2>
 
-							<p> <strong>Postdoctoral Researcher (2022-) </strong>
-							- Center for Research in Cognition and Neurosciences (CRCN) Université Libre de Bruxelles [Belgium] <br />
+							<p> <strong>Postdoctoral Researcher (2022-now) </strong>
+							- Center for Research in Cognition and Neurosciences, Université Libre de Bruxelles [Belgium] <br />
 							Supervisor: <a href="https://axc.ulb.be"> Prof. Axel Cleeremans </a> </p>	
 
 							<p> <strong>Postdoctoral Researcher (2019-2022) </strong>
