--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 							<!-- Text -->
 							<section>
-								<br /> <i> “The only reason for time is so that everything doesn't happen at once.” (Albert Einstein) </i> <br /> <br />
+								<br /> <i> “The only reason for time is so that everything doesn't happen at once.” Albert Einstein </i> <br /> <br />
 
 								The question of whether time exists or not in the universe relies on the concept of <i> simultaneity </i>.<br />
 								Yet, any biological system holds a maximum temporal resolution of information processing, <br />
