--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
+							<li><a href="#intro">Who I am</a></li>
 							<li><a href="#one">Scientific Publications</a></li>
 							<li><a href="#two">Research Tools</a></li>
-							<li><a href="#three">Consultancy</a></li>
+							<li><a href="#three">Consultancy Services</a></li>
 							<li><a href="#four">Education</a></li>
 							<li><a href="#five">Contact</a></li>
 						</ul>
