--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
 							<!-- Text -->
 							<section>
 								<br /> <i> “The only reason for time is so that everything doesn't happen at once.” Albert Einstein </i> <br /> <br />
-
-								The question of whether time exists or not in the universe relies on the concept of <i> simultaneity </i>.<br />
+								The physical time exists or not in the universe relies on the concept of <i> simultaneity</i>.<br />
 								Yet, any biological system holds a maximum temporal resolution of information processing, <br />
-								which enables subjective experiences of time and simultaneity but constrains all perceptions and behaviors. <br />
+								which enables the subjective experience of time and simultaneity but also constrains all perceptions and behaviors. <br />
 								To solve this puzzling fact, I investigate our sensory experiences of simultaneity and their neural subtrates. <br /> <br />
 								<!-- Time and space are intertwined both in the universe and in our mind.
 								Whilst everything we do or perceive is timely defined, 
