--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<!-- Text -->
 							<section>
 								<br /> <i> “The only reason for time is so that everything doesn't happen at once.” Albert Einstein </i> <br /> <br />
-								The physical time exists or not in the universe relies on the concept of <i> simultaneity</i>.<br />
+								Whether physical time exists or not in the universe relies on the concept of <i> simultaneity</i>.<br />
 								Yet, any biological system holds a maximum temporal resolution of information processing, <br />
 								which enables the subjective experience of time and simultaneity but also constrains all perceptions and behaviors. <br />
 								To solve this puzzling fact, I investigate our sensory experiences of simultaneity and their neural subtrates. <br /> <br />
