--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 								<br /> <i> “The only reason for time is so that everything doesn't happen at once.” Albert Einstein </i> <br /> <br />
 								Whether physical time exists or not in the universe relies on the concept of <i> simultaneity</i>.<br />
 								Yet, any biological system holds a maximum temporal resolution of information processing, <br />
-								which enables the subjective experience of time and simultaneity but also constrains all perceptions and behaviors. <br />
-								To solve this puzzling fact, I investigate our sensory experiences of simultaneity and their neural subtrates. <br /> <br />
+								which enables the subjective experience of time and simultaneity but also constrains all perceptions and behaviors. <br /> <br />
+								How this temporal resolution shapes our life?<br />
+								To answer this puzzling question, I investigate our sensory experiences of simultaneity and their neural subtrates. <br /> <br />
 								<!-- Time and space are intertwined both in the universe and in our mind.
 								Whilst everything we do or perceive is timely defined, 
 								Humans, as any other system, hold a maximum temporal resolution to process information. Big time!
