--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								Whether physical time exists or not in the universe relies on the concept of <i> simultaneity</i>.<br />
 								Yet, any biological system holds a maximum temporal resolution of information processing, <br />
 								which enables the subjective experience of time and simultaneity but also constrains all perceptions and behaviors. <br /> <br />
-								How this temporal resolution shapes our life?<br />
+								How is this temporal resolution shaping our life?<br />
 								To answer this puzzling question, I investigate our sensory experiences of simultaneity and their neural subtrates. <br /> <br />
 								<!-- Time and space are intertwined both in the universe and in our mind.
 								Whilst everything we do or perceive is timely defined, 
