--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 						<div class="inner">
 							<a href="#" class="image"><img src="images/francoisFramed.png" alt="" data-position="center center" data-push-content="true" width="200"  /></a>
 							<h2>Dr. Francois R. Foerster</h1>
-							<h3> Experimental Psychologist, Cognitive Neuroscientist & Consultant <br />
-								Center for Research in Cognition and Neuroscience, ULB, Brussels 
-								Royla Military Academy, Brussels </h2>
+							<h3> Experimental Psychologist & Cognitive Neuroscientist <br /> </h2>
+							<h3> Center for Research in Cognition and Neuroscience, ULB, Brussels  </h2>
+							<h3> Royal Military Academy, Brussels </h2>
 							<!-- <p> 
 								The question of whether time exists or not in the universe relies on the question of <i> simultaneity </i>. <br />
 								Yet, any biological system holds a maximum temporal resolution of information processing, <br />
