--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 							<a href="#" class="image"><img src="images/francoisFramed.png" alt="" data-position="center center" data-push-content="true" width="200"  /></a>
 							<h2>Dr. Francois R. Foerster</h1>
 							<h3> Experimental Psychologist & Cognitive Neuroscientist <br /> </h2>
-							<h3> Center for Research in Cognition and Neuroscience, ULB, Brussels  </h2>
-							<h3> Royal Military Academy, Brussels </h2>
+							<h4> Center for Research in Cognition and Neuroscience, ULB, Brussels  </h3>
+							<h4> Royal Military Academy, Brussels </h3>
 							<!-- <p> 
 								The question of whether time exists or not in the universe relies on the question of <i> simultaneity </i>. <br />
 								Yet, any biological system holds a maximum temporal resolution of information processing, <br />
@@ -81,7 +81,7 @@
 
 					
 				<!-- One -->
-				<section id="one" class="wrapper style4 fade-up">
+				<section id="one" class="wrapper style3 fade-up">
 					<div class="inner">
 						<h2>Publications</h2>
 						<p>International peer-reviewed journal and conference research articles.</p>
@@ -90,9 +90,32 @@
 								<span class="icon solid major fa-book"></span>
 								<h3><a href="https://www.youtube.com/watch?v=pQpi6Zw1baU">
 									</a> </h3>
-									<p> <strong> Coming soon (2023) </strong></p>
+									<p> <strong> Coming soon (2024) </strong></p>
 									<p> Foerster, F. R., Giersch, A., Cleeremans, A.</p>
 							</section>
+
+							<section>
+								<span class="icon solid major fa-book"></span>
+								<h3><a href="https://link.springer.com/article/10.1007/s00221-023-06595-9">
+									Tool use acquisition induces a multifunctional interference effect during object processing: evidence from the sensorimotor mu rhythm</a> </h3>
+									<p> <strong> Experimental Brain Research (2023) </strong></p>
+									<p> Foerster, F. R. </p>
+							</section>							
+							<section>
+								<span class="icon solid major fa-book"></span>
+								<h3><a href="https://link.springer.com/article/10.1007/s00221-023-06595-9">
+									Temporal acuity of vision decreases with eccentricity and is associated with schizotypy</a> </h3>
+									<p> <strong> arXiv (2024) </strong></p>
+									<p> Foerster, F. R. </p>
+							</section>
+							<section>
+								<span class="icon solid major fa-book"></span>
+								<h3><a href="https://www.sciencedirect.com/science/article/abs/pii/S0195666323025916">
+									Food for thought: Reinforced learning and recall of physical activity calorie equivalent (PACE) and numerical calorie content in an associative learning task</a> </h3>
+									<p> <strong> Appetite (2024) </strong></p>
+									<p> Cutello, C. A., Foerster, R., Dens, N. </p>
+							</section>
+
 							<section>
 								<span class="icon solid major fa-book"></span>
 								<h3><a href="https://link.springer.com/article/10.1007/s00221-023-06595-9">
