--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 					
 				<!-- One -->
-				<section id="one" class="wrapper style3 fade-up">
+				<section id="one" class="wrapper style4 fade-up">
 					<div class="inner">
 						<h2>Publications</h2>
 						<p>International peer-reviewed journal and conference research articles.</p>
@@ -97,16 +97,16 @@
 							<section>
 								<span class="icon solid major fa-book"></span>
 								<h3><a href="https://link.springer.com/article/10.1007/s00221-023-06595-9">
-									Tool use acquisition induces a multifunctional interference effect during object processing: evidence from the sensorimotor mu rhythm</a> </h3>
-									<p> <strong> Experimental Brain Research (2023) </strong></p>
-									<p> Foerster, F. R. </p>
+									Self and time in individuals with schizophrenia: A motor component?</a> </h3>
+									<p> <strong> Schirophrenia Research (2024) </strong></p>
+									<p> Foerster, F. R., Joos, E., Martin, B., Coull, J. T., Giersch, A.</p>
 							</section>							
 							<section>
 								<span class="icon solid major fa-book"></span>
-								<h3><a href="https://link.springer.com/article/10.1007/s00221-023-06595-9">
+								<h3><a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=oPWQIcoAAAAJ&sortby=pubdate&citation_for_view=oPWQIcoAAAAJ:YOwf2qJgpHMC">
 									Temporal acuity of vision decreases with eccentricity and is associated with schizotypy</a> </h3>
 									<p> <strong> arXiv (2024) </strong></p>
-									<p> Foerster, F. R. </p>
+									<p> Foerster, F. R., Giersch, A., Agalliu, P., Cleeremans, A.</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-book"></span>
