--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 							<section>
 								<span class="icon solid major fa-book"></span>
-								<h3><a href="https://link.springer.com/article/10.1007/s00221-023-06595-9">
+								<h3><a href="https://www.sciencedirect.com/science/article/abs/pii/S0920996424003797">
 									Self and time in individuals with schizophrenia: A motor component?</a> </h3>
 									<p> <strong> Schirophrenia Research (2024) </strong></p>
 									<p> Foerster, F. R., Joos, E., Martin, B., Coull, J. T., Giersch, A.</p>
