--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 							<a href="#" class="image"><img src="images/francoisFramed.png" alt="" data-position="center center" data-push-content="true" width="200"  /></a>
 							<h2>Dr. Francois R. Foerster</h1>
 							<h3> Experimental Psychologist & Cognitive Neuroscientist <br /> </h3>
-							<h4> Center for Research in Cognition and Neuroscience, ULB, Brussels </h4>
-							<h4> Royal Military Academy, Brussels </h4>
+							<h4> <i> Center for Research in Cognition and Neuroscience, ULB, Brussels <br />
+							Royal Military Academy, Brussels </i> </h4>
 							<!-- <p> 
 								The question of whether time exists or not in the universe relies on the question of <i> simultaneity </i>. <br />
 								Yet, any biological system holds a maximum temporal resolution of information processing, <br />
